src/main/java/TLC/CompilerWhile/AntLRFiles/WhileParser.java
package TLC.CompilerWhile.AntLRFiles;// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g 2023-01-20 17:29:59

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class WhileParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "FONCTION", "DEFINITION", "INPUTSUB", "INPUT", "OUTPUT", "COMMANDS", "COMMAND", "VARS", "IF", "FOR", "WHILE", "FOREACH", "AFF", "ELSE", "CONS", "LIST", "HD", "TL", "SYM", "COMP", "EXPCOND", "START", "APPFUNC", "RIGHT", "LEFT", "RIGHTCOND", "LEFTCOND", "THEN", "NIL", "WS", "COMMENT", "Symbol", "Nil", "Variable", "'function'", "':'", "'read'", "'%'", "'write'", "','", "';'", "'nop'", "':='", "'if'", "'then'", "'else'", "'fi'", "'while'", "'do'", "'od'", "'for'", "'foreach'", "'in'", "'('", "'cons'", "')'", "'list'", "'hd'", "'tl'", "'=?'"
    };
    public static final int EOF=-1;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int T__61=61;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int FONCTION=4;
    public static final int DEFINITION=5;
    public static final int INPUTSUB=6;
    public static final int INPUT=7;
    public static final int OUTPUT=8;
    public static final int COMMANDS=9;
    public static final int COMMAND=10;
    public static final int VARS=11;
    public static final int IF=12;
    public static final int FOR=13;
    public static final int WHILE=14;
    public static final int FOREACH=15;
    public static final int AFF=16;
    public static final int ELSE=17;
    public static final int CONS=18;
    public static final int LIST=19;
    public static final int HD=20;
    public static final int TL=21;
    public static final int SYM=22;
    public static final int COMP=23;
    public static final int EXPCOND=24;
    public static final int START=25;
    public static final int APPFUNC=26;
    public static final int RIGHT=27;
    public static final int LEFT=28;
    public static final int RIGHTCOND=29;
    public static final int LEFTCOND=30;
    public static final int THEN=31;
    public static final int NIL=32;
    public static final int WS=33;
    public static final int COMMENT=34;
    public static final int Symbol=35;
    public static final int Nil=36;
    public static final int Variable=37;

    // delegates
    // delegators


        public WhileParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public WhileParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return WhileParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g"; }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "start"
    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:50:1: start : t1= program -> ^( START $t1) ;
    public final WhileParser.start_return start() throws RecognitionException {
        WhileParser.start_return retval = new WhileParser.start_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        WhileParser.program_return t1 = null;


        RewriteRuleSubtreeStream stream_program=new RewriteRuleSubtreeStream(adaptor,"rule program");
        try {
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:50:7: (t1= program -> ^( START $t1) )
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:50:9: t1= program
            {
            pushFollow(FOLLOW_program_in_start272);
            t1=program();

            state._fsp--;

            stream_program.add(t1.getTree());


            // AST REWRITE
            // elements: t1
            // token labels: 
            // rule labels: t1, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_t1=new RewriteRuleSubtreeStream(adaptor,"rule t1",t1!=null?t1.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 50:20: -> ^( START $t1)
            {
                // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:50:23: ^( START $t1)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(START, "START"), root_1);

                adaptor.addChild(root_1, stream_t1.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "start"

    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:51:1: program : function ( program )? ;
    public final WhileParser.program_return program() throws RecognitionException {
        WhileParser.program_return retval = new WhileParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        WhileParser.function_return function1 = null;

        WhileParser.program_return program2 = null;



        try {
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:51:9: ( function ( program )? )
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:51:11: function ( program )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_function_in_program288);
            function1=function();

            state._fsp--;

            adaptor.addChild(root_0, function1.getTree());
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:51:20: ( program )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==38) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:51:21: program
                    {
                    pushFollow(FOLLOW_program_in_program291);
                    program2=program();

                    state._fsp--;

                    adaptor.addChild(root_0, program2.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class function_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "function"
    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:52:1: function : 'function' t1= Symbol ':' t2= definition -> ^( FONCTION $t1 $t2) ;
    public final WhileParser.function_return function() throws RecognitionException {
        WhileParser.function_return retval = new WhileParser.function_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token t1=null;
        Token string_literal3=null;
        Token char_literal4=null;
        WhileParser.definition_return t2 = null;


        Object t1_tree=null;
        Object string_literal3_tree=null;
        Object char_literal4_tree=null;
        RewriteRuleTokenStream stream_38=new RewriteRuleTokenStream(adaptor,"token 38");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleTokenStream stream_Symbol=new RewriteRuleTokenStream(adaptor,"token Symbol");
        RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");
        try {
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:52:9: ( 'function' t1= Symbol ':' t2= definition -> ^( FONCTION $t1 $t2) )
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:52:12: 'function' t1= Symbol ':' t2= definition
            {
            string_literal3=(Token)match(input,38,FOLLOW_38_in_function300);  
            stream_38.add(string_literal3);

            t1=(Token)match(input,Symbol,FOLLOW_Symbol_in_function304);  
            stream_Symbol.add(t1);

            char_literal4=(Token)match(input,39,FOLLOW_39_in_function306);  
            stream_39.add(char_literal4);

            pushFollow(FOLLOW_definition_in_function310);
            t2=definition();

            state._fsp--;

            stream_definition.add(t2.getTree());


            // AST REWRITE
            // elements: t2, t1
            // token labels: t1
            // rule labels: t2, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleTokenStream stream_t1=new RewriteRuleTokenStream(adaptor,"token t1",t1);
            RewriteRuleSubtreeStream stream_t2=new RewriteRuleSubtreeStream(adaptor,"rule t2",t2!=null?t2.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 52:51: -> ^( FONCTION $t1 $t2)
            {
                // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:52:54: ^( FONCTION $t1 $t2)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(FONCTION, "FONCTION"), root_1);

                adaptor.addChild(root_1, stream_t1.nextNode());
                adaptor.addChild(root_1, stream_t2.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "function"

    public static class definition_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "definition"
    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:53:1: definition : 'read' t1= input '%' t2= commands '%' 'write' t3= output -> ^( DEFINITION ( $t1)? $t2 $t3) ;
    public final WhileParser.definition_return definition() throws RecognitionException {
        WhileParser.definition_return retval = new WhileParser.definition_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token string_literal5=null;
        Token char_literal6=null;
        Token char_literal7=null;
        Token string_literal8=null;
        WhileParser.input_return t1 = null;

        WhileParser.commands_return t2 = null;

        WhileParser.output_return t3 = null;


        Object string_literal5_tree=null;
        Object char_literal6_tree=null;
        Object char_literal7_tree=null;
        Object string_literal8_tree=null;
        RewriteRuleTokenStream stream_40=new RewriteRuleTokenStream(adaptor,"token 40");
        RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
        RewriteRuleTokenStream stream_42=new RewriteRuleTokenStream(adaptor,"token 42");
        RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
        RewriteRuleSubtreeStream stream_input=new RewriteRuleSubtreeStream(adaptor,"rule input");
        RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");
        try {
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:53:11: ( 'read' t1= input '%' t2= commands '%' 'write' t3= output -> ^( DEFINITION ( $t1)? $t2 $t3) )
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:53:14: 'read' t1= input '%' t2= commands '%' 'write' t3= output
            {
            string_literal5=(Token)match(input,40,FOLLOW_40_in_definition329);  
            stream_40.add(string_literal5);

            pushFollow(FOLLOW_input_in_definition333);
            t1=input();

            state._fsp--;

            stream_input.add(t1.getTree());
            char_literal6=(Token)match(input,41,FOLLOW_41_in_definition335);  
            stream_41.add(char_literal6);

            pushFollow(FOLLOW_commands_in_definition339);
            t2=commands();

            state._fsp--;

            stream_commands.add(t2.getTree());
            char_literal7=(Token)match(input,41,FOLLOW_41_in_definition341);  
            stream_41.add(char_literal7);

            string_literal8=(Token)match(input,42,FOLLOW_42_in_definition343);  
            stream_42.add(string_literal8);

            pushFollow(FOLLOW_output_in_definition347);
            t3=output();

            state._fsp--;

            stream_output.add(t3.getTree());


            // AST REWRITE
            // elements: t3, t1, t2
            // token labels: 
            // rule labels: t1, t2, retval, t3
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_t1=new RewriteRuleSubtreeStream(adaptor,"rule t1",t1!=null?t1.tree:null);
            RewriteRuleSubtreeStream stream_t2=new RewriteRuleSubtreeStream(adaptor,"rule t2",t2!=null?t2.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_t3=new RewriteRuleSubtreeStream(adaptor,"rule t3",t3!=null?t3.tree:null);

            root_0 = (Object)adaptor.nil();
            // 53:68: -> ^( DEFINITION ( $t1)? $t2 $t3)
            {
                // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:53:71: ^( DEFINITION ( $t1)? $t2 $t3)
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(DEFINITION, "DEFINITION"), root_1);

                // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:53:84: ( $t1)?
                if ( stream_t1.hasNext() ) {
                    adaptor.addChild(root_1, stream_t1.nextTree());

                }
                stream_t1.reset();
                adaptor.addChild(root_1, stream_t2.nextTree());
                adaptor.addChild(root_1, stream_t3.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "definition"

    public static class input_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "input"
    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:55:1: input : (t1= inputSub )? -> ^( INPUT ( $t1)? ) ;
    public final WhileParser.input_return input() throws RecognitionException {
        WhileParser.input_return retval = new WhileParser.input_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        WhileParser.inputSub_return t1 = null;


        RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");
        try {
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:55:7: ( (t1= inputSub )? -> ^( INPUT ( $t1)? ) )
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:55:9: (t1= inputSub )?
            {
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:55:11: (t1= inputSub )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==Variable) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:55:11: t1= inputSub
                    {
                    pushFollow(FOLLOW_inputSub_in_input373);
                    t1=inputSub();

                    state._fsp--;

                    stream_inputSub.add(t1.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: t1
            // token labels: 
            // rule labels: t1, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_t1=new RewriteRuleSubtreeStream(adaptor,"rule t1",t1!=null?t1.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 55:22: -> ^( INPUT ( $t1)? )
            {
                // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:55:25: ^( INPUT ( $t1)? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(INPUT, "INPUT"), root_1);

                // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:55:33: ( $t1)?
                if ( stream_t1.hasNext() ) {
                    adaptor.addChild(root_1, stream_t1.nextTree());

                }
                stream_t1.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "input"

    public static class inputSub_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "inputSub"
    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:56:1: inputSub : t1= variable ( ',' t2= inputSub )? -> $t1 ( $t2)? ;
    public final WhileParser.inputSub_return inputSub() throws RecognitionException {
        WhileParser.inputSub_return retval = new WhileParser.inputSub_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal9=null;
        WhileParser.variable_return t1 = null;

        WhileParser.inputSub_return t2 = null;


        Object char_literal9_tree=null;
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleSubtreeStream stream_variable=new RewriteRuleSubtreeStream(adaptor,"rule variable");
        RewriteRuleSubtreeStream stream_inputSub=new RewriteRuleSubtreeStream(adaptor,"rule inputSub");
        try {
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:56:9: (t1= variable ( ',' t2= inputSub )? -> $t1 ( $t2)? )
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:56:11: t1= variable ( ',' t2= inputSub )?
            {
            pushFollow(FOLLOW_variable_in_inputSub392);
            t1=variable();

            state._fsp--;

            stream_variable.add(t1.getTree());
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:56:23: ( ',' t2= inputSub )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==43) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:56:24: ',' t2= inputSub
                    {
                    char_literal9=(Token)match(input,43,FOLLOW_43_in_inputSub395);  
                    stream_43.add(char_literal9);

                    pushFollow(FOLLOW_inputSub_in_inputSub399);
                    t2=inputSub();

                    state._fsp--;

                    stream_inputSub.add(t2.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: t1, t2
            // token labels: 
            // rule labels: t1, t2, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_t1=new RewriteRuleSubtreeStream(adaptor,"rule t1",t1!=null?t1.tree:null);
            RewriteRuleSubtreeStream stream_t2=new RewriteRuleSubtreeStream(adaptor,"rule t2",t2!=null?t2.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 56:42: -> $t1 ( $t2)?
            {
                adaptor.addChild(root_0, stream_t1.nextTree());
                // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:56:49: ( $t2)?
                if ( stream_t2.hasNext() ) {
                    adaptor.addChild(root_0, stream_t2.nextTree());

                }
                stream_t2.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "inputSub"

    public static class output_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "output"
    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:57:1: output : (t1= outputSub )? -> ^( OUTPUT ( $t1)? ) ;
    public final WhileParser.output_return output() throws RecognitionException {
        WhileParser.output_return retval = new WhileParser.output_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        WhileParser.outputSub_return t1 = null;


        RewriteRuleSubtreeStream stream_outputSub=new RewriteRuleSubtreeStream(adaptor,"rule outputSub");
        try {
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:57:8: ( (t1= outputSub )? -> ^( OUTPUT ( $t1)? ) )
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:57:10: (t1= outputSub )?
            {
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:57:12: (t1= outputSub )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==Variable) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:57:12: t1= outputSub
                    {
                    pushFollow(FOLLOW_outputSub_in_output419);
                    t1=outputSub();

                    state._fsp--;

                    stream_outputSub.add(t1.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: t1
            // token labels: 
            // rule labels: t1, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_t1=new RewriteRuleSubtreeStream(adaptor,"rule t1",t1!=null?t1.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 57:24: -> ^( OUTPUT ( $t1)? )
            {
                // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:57:27: ^( OUTPUT ( $t1)? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(OUTPUT, "OUTPUT"), root_1);

                // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:57:36: ( $t1)?
                if ( stream_t1.hasNext() ) {
                    adaptor.addChild(root_1, stream_t1.nextTree());

                }
                stream_t1.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "output"

    public static class outputSub_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "outputSub"
    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:58:1: outputSub : t1= variable ( ',' t2= outputSub )? -> $t1 ( $t2)? ;
    public final WhileParser.outputSub_return outputSub() throws RecognitionException {
        WhileParser.outputSub_return retval = new WhileParser.outputSub_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal10=null;
        WhileParser.variable_return t1 = null;

        WhileParser.outputSub_return t2 = null;


        Object char_literal10_tree=null;
        RewriteRuleTokenStream stream_43=new RewriteRuleTokenStream(adaptor,"token 43");
        RewriteRuleSubtreeStream stream_outputSub=new RewriteRuleSubtreeStream(adaptor,"rule outputSub");
        RewriteRuleSubtreeStream stream_variable=new RewriteRuleSubtreeStream(adaptor,"rule variable");
        try {
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:58:10: (t1= variable ( ',' t2= outputSub )? -> $t1 ( $t2)? )
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:58:12: t1= variable ( ',' t2= outputSub )?
            {
            pushFollow(FOLLOW_variable_in_outputSub438);
            t1=variable();

            state._fsp--;

            stream_variable.add(t1.getTree());
            // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:58:24: ( ',' t2= outputSub )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==43) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:58:25: ',' t2= outputSub
                    {
                    char_literal10=(Token)match(input,43,FOLLOW_43_in_outputSub441);  
                    stream_43.add(char_literal10);

                    pushFollow(FOLLOW_outputSub_in_outputSub445);
                    t2=outputSub();

                    state._fsp--;

                    stream_outputSub.add(t2.getTree());

                    }
                    break;

            }



            // AST REWRITE
            // elements: t2, t1
            // token labels: 
            // rule labels: t1, t2, retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_t1=new RewriteRuleSubtreeStream(adaptor,"rule t1",t1!=null?t1.tree:null);
            RewriteRuleSubtreeStream stream_t2=new RewriteRuleSubtreeStream(adaptor,"rule t2",t2!=null?t2.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 58:44: -> $t1 ( $t2)?
            {
                adaptor.addChild(root_0, stream_t1.nextTree());
                // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:58:51: ( $t2)?
                if ( stream_t2.hasNext() ) {
                    adaptor.addChild(root_0, stream_t2.nextTree());

                }
                stream_t2.reset();

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "outputSub"

    public static class commands_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "commands"
    // C:\\Users\\33665\\Desktop\\TLC\\TP2\\While.g:61:1: commands : t1= command ( ';' t2= commands )? -> $t1 ( $t2)? ;
    public final WhileParser.commands_return commands() throws RecognitionException {
        WhileParser.commands_return retval = new WhileParser.commands_return();
        retval.start = input.LT(1);

        Object root_0 = null;
